--- a/style.css
+++ b/style.css
@@ -60,15 +60,32 @@ main{
     border-radius: 2px;
     margin: 2rem 0 1rem;
     font-size: 0.85rem;
+    cursor: pointer;
 }
 
 .data{
     width: 70%;
-    margin: auto;
+    margin: 3rem auto;
     height: max-content;
     display: flex;
 }
 
 .countries{
-    width: 12rem;
+    width: 15rem;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.number{
+    width: 15rem;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.chat_data{
+    width: 40rem;
+}
+
+.chat{
+    background-color: var(--orange);
 }
